--- a/index.html
+++ b/index.html
@@ -220,6 +220,20 @@ Aunque la población crece, este ritmo no se refleja en muchas especies de fauna
 <img src="imagenes/tierra-13.jpg" width="60%" height="60%">
 </div>
 </div>
+<center>
+
+<div data-role="main" class="ui-content" align="center">
+<div style="width:30%;">
+<ul data-role="controlgroup" data-type="vertical" data-theme="a">
+<li class="ui-first-child ui-last-child">
+<a href="https://m.elcultural.com/revista/letras/Tierra-madre/41105" target="_self" data-role="button">
+<h4>Ver más</h4>
+</a>
+</li>
+</ul>
+</div>
+</div>
+</center>
 <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <div>
 <img src="imagenes/mdpi.png" width="10%" height="10%" alt="pie">
